// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Test <Markdown> component > allows a href with certain protocols 1`] = `
<DocumentFragment>
  <p>
    &lt;a href="https://example.com"&gt;Example link that should work.&lt;/a&gt;
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > does not allow href with unknown protocols 1`] = `
<DocumentFragment>
  <p>
    &lt;a&gt;Example link that should not work.&lt;/a&gt;
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > filters close-break tags 1`] = `
<DocumentFragment>
  <p>
    &lt;br&gt;sample text&lt;br&gt;
  </p>
</DocumentFragment>
`;

exports[`Test <Markdown> component > filters out disallowed tags 1`] = `
<DocumentFragment>
  <ul>
    

    <li>
      Markdown document
    </li>
    

  </ul>
</DocumentFragment>
`;

exports[`Test <Markdown> component > safely handles broken HTML tags 1`] = `
<DocumentFragment>
  <ul>
    

    <li>
      Markdown document
&lt;br&gt;&lt;br&gt;
    </li>
    

    <li>
      test content
    </li>
    

  </ul>
</DocumentFragment>
`;
